<resources>

    <string name="app_name">Koinbox</string>
    <string name="password">Password: </string>
    <string name="username">Username: </string>
    <string name="name_text">Name: </string>
    <string name="age_text">Age: </string>
    <string name="university_text">University: </string>
    <string name="home">Home City: </string>
    <string name="away">Destination City: </string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_koinbox">Koinbox</string>
    <string name="password_again_text">Password (Again): </string>
    <string name="email">Email: </string>
    

</resources>