<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/otheruserprofile_layout">
    <TableRow>
        <TextView
        android:text="@string/name_text" 
        />
        
	    <TextView
        android:id="@+id/otheruser_name" 
        />
	</TableRow>
	
    <TableRow>
        <TextView
        android:text="@string/age_text" />

        <TextView
        android:id="@+id/otheruser_age"
        />
	    
	</TableRow>
	
    <TableRow>
        <TextView
        android:text="@string/university_text" />

        <TextView
        android:id="@+id/otheruser_university"/>
	    
	</TableRow>
	
    <TableRow>
        <TextView
        android:text="@string/home" 
        android:layout_marginRight="7dp"/>

        <TextView
        android:id="@+id/otheruser_home_city"/>
	    
	</TableRow>
	
    <TableRow>
        <TextView
        android:text="@string/away" />

        <TextView
        android:id="@+id/otheruser_away_city"/>
	    
	</TableRow>
	
	<TableRow>


        <TextView
        android:id="@+id/other_user"
        android:layout_marginBottom="5dp"/>
	    
	</TableRow>
</TableLayout>


</ScrollView>