<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/userprofile_layout">
    <TableRow>
        <TextView
        android:text="@string/name_text" 
        />
        
	    <TextView
        android:id="@+id/name" 
        />
	</TableRow>
	
    <TableRow>
        <TextView
        android:text="@string/age_text" />

        <TextView
        android:id="@+id/age"
        />
	    
	</TableRow>
	
    <TableRow>
        <TextView
        android:text="@string/university_text" />

        <TextView
        android:id="@+id/university"/>
	    
	</TableRow>
	
    <TableRow>
        <TextView
        android:text="@string/home" 
        android:layout_marginRight="7dp"/>

        <TextView
        android:id="@+id/home_city"/>
	    
	</TableRow>
	
    <TableRow>
        <TextView
        android:text="@string/away" />

        <TextView
        android:id="@+id/away_city"/>
	    
	</TableRow>
	<TableRow>
        <TextView
        android:text="[Edit Profile]"
        android:id="@+id/edit_profile"
        android:layout_marginBottom="15dp"
        android:onClick="onClick"                
        android:clickable="true"
        />
	    
	</TableRow>
	
	<TableRow>


        <TextView
        android:text="My Interests:"
        android:layout_marginBottom="5dp"/>
	    
	</TableRow>
	<TableRow>
        <TextView
        android:text="[Add Interest]"
        android:id="@+id/add_interest"
        android:layout_marginBottom="15dp"
        android:onClick="onClick"                
        android:clickable="true"
        />
	    
	</TableRow>
</TableLayout>



</ScrollView>